# uplate

./: .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  README.md  cliff.toml  dist-workspace.toml  install.sh  justfile
.github/workflows/: release.yml
_plans/: FIRST_PLAN.md  TODOS.md  upgrade.ts
npm/: .gitignore  README.md  bin.js  install.js  package.json
scripts/: tag_and_release.sh
src/: cli.rs  commands.rs  config.rs  git.rs  main.rs  snapshot.rs  source.rs
